# asknarymane

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: chat.py
backend/app/scripts/: ingest.py
backend/app/services/: agent.py  embeddings.py  github.py  llm.py  rag.py
backend/tests/: conftest.py  test_endpoints.py  test_github.py  test_rag.py
docs/: phase2-rag-explications.md
documents/blog/: publications_community.md
documents/cv/: career_aspirations.md  profile.md
documents/education/: parcours_academique.md
documents/experience/: ekinops_oneaccess.md  iot_edge_ai.md  llm_rag_agents.md
documents/projects/: asknarymane.md  gallerykeeper_app.md  yologk_serving_api.md
documents_fr/blog/: publications_community.md
documents_fr/cv/: career_aspirations.md  profile.md
documents_fr/education/: parcours_academique.md
documents_fr/experience/: ekinops_oneaccess.md  iot_edge_ai.md  llm_rag_agents.md
documents_fr/projects/: asknarymane.md  gallerykeeper_app.md  yologk_serving_api.md
frontend/: Dockerfile  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatWidget.tsx  MessageBubble.tsx  TypingIndicator.tsx
